EU PDF reports- change bar chart min/max axis values

--- a/webapp/src/main/resources/reports/facility_level_barchart.jrxml
+++ b/webapp/src/main/resources/reports/facility_level_barchart.jrxml
@@ -283,8 +283,8 @@ AND `district_short_name` like $P{dist_short_name}]]>
 							</labelFont>
 						</axisFormat>
 					</valueAxisFormat>
-					<rangeAxisMinValueExpression><![CDATA[0]]></rangeAxisMinValueExpression>
-					<rangeAxisMaxValueExpression><![CDATA[4]]></rangeAxisMaxValueExpression>
+					<rangeAxisMinValueExpression>0</rangeAxisMinValueExpression>
+					<rangeAxisMaxValueExpression>4</rangeAxisMaxValueExpression>
 				</barPlot>
 			</barChart>
 		</band>
