--- a/webapp/src/main/resources/reports/province_top.jrxml
+++ b/webapp/src/main/resources/reports/province_top.jrxml
@@ -208,8 +208,8 @@ limit 3;]]>
 					<valueAxisFormat>
 						<axisFormat/>
 					</valueAxisFormat>
-					<rangeAxisMinValueExpression><![CDATA[0]]></rangeAxisMinValueExpression>
-					<rangeAxisMaxValueExpression><![CDATA[4]]></rangeAxisMaxValueExpression>
+					<rangeAxisMinValueExpression>0</rangeAxisMinValueExpression>
+					<rangeAxisMaxValueExpression>4</rangeAxisMaxValueExpression>
 				</barPlot>
 			</barChart>
 			<componentElement>
